24.10.2010 git
- bash client: continouus database integration works for mySQL schema. 
Now envisioning Oracle.

23.10.2010 git
- added FAQ questions on how to download, test and checkout deltasql with git.

Bash client:
- continouus database integration is close to work for mySQL schemas

22.10.2010 git
- added FAQ question on formats which can be exported by deltasql

21.10.2010 git
Server changes
- added sqlite support (sync table definition)
- added ability to export the synchronization script as single files 
zipped to be used in dbdeploy like tools
- added zip library under /utils/createzip by Rochak Chauhan (www.rochakchauhan.com)

7.10.2010 1.1.1 Release Notes
Server changes
- improved error handling in synchronization step, 2 new error types 
added, 1 error did not show up due to mistake in code
- deletion scripts revisited to leave database consistent: delete 
Project and delete Module were not working properly
- Layout on initial page changed


7.10.2010 git
- fixed error message number 5 which never appeared during db 
synchronization.
- when deleting a user, the scripts submitted by this user are 
reassigned to admin
- deleting a module also deletes assignment of scripts to branches
- deleting branches and scripts revisited
- Layout of initial page rivisited, removed code for piwik stats as it 
was not used anymore

6.10.2010 git
Project deletion also deletes existing branches for the deleted project 
and the reference from scripts to the deleted branches.

Added error messages on synchronization steps:
- if the version number is less than 0 or alphanumeric
- if the user is attempting to synchronize on a project without any 
modules

18.9.2010 git
Moved source code from CVS module dbsync hosted on GPU project to git 
module deltasql hosted on project deltasql of project homepage. 

13.9.2010 1.1.0 Release Notes
- ability to submit scripts in chain
- new deltasql client in bash script, skilled people should be able to 